--- a/provider_routes/pubspec.yaml
+++ b/provider_routes/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   provider: ^6.0.5
   lite_rolling_switch: ^1.0.1
   shared_preferences: ^2.0.18
+  flutter_animate: ^4.1.0
+  rolling_switch: ^0.0.2
 
 dev_dependencies:
   flutter_test:
@@ -63,7 +65,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/
+    - assets/images/logo.jpg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
